--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,8 @@
     <%= render "layouts/header" %>
     <%= yield %>
     <%= render "layouts/footer" %>
+    <%= render "users/sessions/signin" %>
+    <%= render "users/registrations/signup" %>
 
     <script type="text/javascript">
       // In this script tag we are checking alert's and if there is alert this code will be execute
