--- a/app/views/users/registrations/_signup.html.erb
+++ b/app/views/users/registrations/_signup.html.erb
@@ -11,7 +11,7 @@
 
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
               <div class="form-container">
-              <div class="alert error-message" id="usersLoginError"></div>
+              <div class="alert error-message" id="usersSignupError"></div>
                 <h1 class="users-main-heading"><%= t("sign_up") %></h1>
                 <%= form_with(model: resource, as: resource_name, url: registration_path(resource_name), html: {id: "login"}, remote: true) do |f| %>
                   <%= f.invisible_captcha :subtitle %>
@@ -52,7 +52,7 @@
                       <%= f.submit t("sign_up"), class:"btn primary-button users-login-primary-button" %>
                       <div class="users-text-container">
                         <span class="users-text"><%= t("users.registrations.ask_already_registered") %></span>
-                        <%= link_to t("login"), new_user_session_path ,class:"anchor-text" %>
+                        <a class="anchor-text " href="#" data-dismiss="modal" data-target="#login" data-toggle="modal">sign up</a>
                       </div>
                     </div>
                   </div>
