--- a/app/views/users/registrations/create.js.erb
+++ b/app/views/users/registrations/create.js.erb
@@ -1,1 +1,8 @@
-location.reload();
+if ("<%= j(devise_error_messages!.html_safe) %>") {
+    const errorDiv = document.getElementById("usersSignupError");
+    errorDiv.innerHTML = "<%= j(devise_error_messages!.html_safe) %>";
+    errorDiv.style.display = "block";
+}
+else {
+    location.reload();
+}
